<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_from"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/from_label"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/tempUnitSelect1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_to"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/to_label"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/tempUnitSelect2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_value"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/value_label"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userInputSigned"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/hint_msg"
            android:inputType="numberSigned|numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/button_label"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_result"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/result_label"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_light"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>